New in release 0.99 (August x, 2007)

  * Initial support to use OpenJDK as Java core library.
  * Fixed memory leak in Boehm-GC.
  * Use 8-byte stack-slots on all architectures.
  * Faster C-to-Java calls.
  * Removed genoffsets, cross-compilation is now much easier.


New in release 0.98 (June 6, 2007)

  * ARM and MIPS32 code generators are now open-source.
  * PowerPC64 code generator was added.
  * Sun's phoneme CLDC-1.1 classes can now be used as Java core
    library.
  * Exception throwing code was completely rewritten, this saves JIT
    code size from 20% up to 50%.
  * Lock-record code was rewritten and a memory leak was fixed.
  * Threads code has been reworked and improved.
  * Exception code has been reworked and improved.
  * Implemented Class/Method/Field getSignature.
  * A lot of stuff has been reworked, fixed or improved in the whole
    VM code.
  * Fixed memory leak in threads code.


New in release 0.97 (October 30, 2006)

  * New instruction format.
  * New intermediate representation with unified variables.
  * Local subroutine elimination.
  * Fixed the interpreter - it runs eclipse now.
  * New stack-based verifier (used for -Xint).
  * Boehm GC updated to version 6.8.
  * Added enable/disable system assertion support (-esa/-dsa).
  * Initial javax.management support.
  * Initial sun.misc.Unsafe (JSR166) support.
  * Added failed class as message to ClassCastException's.
  * AttachCurrentThread, DetachCurrentThread, and
    AttachCurrentThreadAsDaemon implemented.
  * libjvm is now opened via dlopen (removed -rpath stuff).
  * Data segment now reuses values (if possible).

  * Fixed AbstractMethodError bug.
  * Fixed builtin_isanysubclass (BeanShell bug).
  * Fixed a memory leak in dump memory.
  * Fixed a bug with DUP2_X1 and DUP2_X2.
  * Safe decoding of invalid UTF-8 sequences in NewStringUTF.
  * Fixed line numbers in exceptions thrown through the JIT.
  * Proper null-check for MONITOREXIT.
  * Many low-level jasmin tests added.

